tests/NormalTests/paczka1/fuzzy1/18948270.err
Error in line 8: UWQiR S51 72,7
Error in line 12: 8YUMc S51 68,9
